--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <div class="info_block">
             <div class="info_item">
               <div class="info_img">
-                <img src="/images/phone.png" />
+                <img src="images/phone.png" />
               </div>
               <h3 class="info_title">CALL US NOW 222-222-222</h3>
               <p class="info_text">Feel free to call us</p>
@@ -61,7 +61,7 @@
           <div class="info_block">
             <div class="info_item">
               <div class="info_img">
-                <img src="/images/Group (1).png" />
+                <img src="images/Group (1).png" />
               </div>
               <h3 class="info_title">GET FREE APPOITMET</h3>
               <p class="info_text">Free Diagnosis & Brake Checks</p>
@@ -70,7 +70,7 @@
           <div class="info_block">
             <div class="info_item">
               <div class="info_img">
-                <img src="/images/Group (2).png" />
+                <img src="images/Group (2).png" />
               </div>
               <h3 class="info_title">FIND US ON MAP</h3>
               <p class="info_text">New York, 1286 Ruumu Nanor</p>
@@ -161,7 +161,7 @@
             </p>
             <a href="" class="about_link">MORE ABOUT US</a>
           </div>
-          <img src="/images//about.jpg" alt="" class="about_image" />
+          <img src="images//about.jpg" alt="" class="about_image" />
         </div>
       </div>
     </section>
@@ -239,13 +239,13 @@
         </p>
        <div class="footer_so">
          <a href="https://linkedin.com" target="_blanck" class="footer_link">
-           <img src="/images/Lin.png">
+           <img src="images/Lin.png">
          </a>
          <a href="https://facebook.com" target="_blanck" class="footer_link">
-           <img src="/images/face.png" >
+           <img src="images/face.png" >
          </a>
          <a href="https://instagram.com" target="_blanck" class="footer_link">
-           <img src="/images/instagram (1) 1.svg" >
+           <img src="images/instagram (1) 1.svg" >
          </a>
        </div>
       </div>
